k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    #app.openshift.io/vcs-ref: f7580aa1eb6f7176705176e201ecff4de93edafb
    #app.openshift.io/vcs-uri: https://github.com/cloud-native-garage-method-japan-cohort/yukihiro-azuma-express-sample-app.git
  labels:
    app: pisces-search-app-api
    app.kubernetes.io/instance: pisces-search-app-api
    app.kubernetes.io/name: pisces-search-app-api
    app.openshift.io/runtime: js
  name: pisces-search-app-api
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app.kubernetes.io/instance: pisces-search-app-api
      app.kubernetes.io/name: pisces-search-app-api
  template:
    metadata:
      creationTimestamp: null
      labels:
        app.kubernetes.io/instance: pisces-search-app-api
        app.kubernetes.io/name: pisces-search-app-api
    spec:
      containers:
        - env:
          - name: INGRESS_HOST
          - name: PROTOCOLS
          - name: LOG_LEVEL
            value: debug
          - name: DISCOVERY_VERSION
            value: "2019-04-30"
          - name: DISCOVERY_URL
            value: "https://api.eu-gb.discovery.watson.cloud.ibm.com"
          - name: DISCOVERY_API_KEY
            valueFrom:
              secretKeyRef: 
                name: discovery-keys 
                key: DISCOVERY_API_KEY
          - name: DISCOVERY_ENVIRONMENT
            valueFrom:
              secretKeyRef: 
                name: discovery-keys 
                key: DISCOVERY_ENVIRONMENT
          - name: DISCOVERY_COLLECTION
            valueFrom:
              secretKeyRef: 
                name: discovery-keys 
                key: DISCOVERY_COLLECTION
          image: quay.io/yukihiro_azuma1_ibm/pisces-search-app-api
          imagePullPolicy: IfNotPresent
          livenessProbe:
            failureThreshold: 3
            httpGet:
              path: /
              port: 8000
              scheme: HTTP
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          name: pisces-search-app-api
          ports:
            - containerPort: 8000
              name: http
              protocol: TCP
          readinessProbe:
            failureThreshold: 3
            httpGet:
              path: /
              port: http
              scheme: HTTP
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          resources: {}
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
