k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: pisces-search-app-api
    app.kubernetes.io/instance: pisces-search-app-api
    app.kubernetes.io/name: pisces-search-app-api
  name: pisces-search-app-api
spec:
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 8000
  selector:
    app.kubernetes.io/instance: pisces-search-app-api
    app.kubernetes.io/name: pisces-search-app-api
  sessionAffinity: None
  type: ClusterIP
